--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,21 @@
-title: Your awesome title
-email: your-email@example.com
+title: Picpic现场互动 - 博客
+email: service@picpic.live
+home_url: https://picpiclive.com
+home_title: 主页
+blog_home_title: 博客主页
+logourl: https://drcn65av4x1ah.cloudfront.net/favicon-270x270.png
 description: >-
-  Write an awesome description for your new site here. You can edit this line in
-  _config.yml. It will appear in your document head meta (for Google search
-  results) and in your feed.xml site description.
+  Picpic现场互动 - 博客
 baseurl: /blog
 url: 'https://picpiclive.com'
-twitter_username: jekyllrb
-github_username: jekyll
+twitter_username: picpiclive
+instagram_username: picpic_live
+facebook_username: Picpic-Live-161583901330530
+facebook_displayname: Picpic Live
+youtube_username: UCShZ-r3w5xyvdxpmmBBfh6w
+youtube_displayname: Picpic Live
+default_list_title: 全部文章
+# github_username: jekyll
 markdown: kramdown
 theme: minima
 plugins:
