--- a/_config.yml
+++ b/_config.yml
@@ -31,8 +31,40 @@ sponsorship_url: "/products/sponsorship/"
 demo_url: "/demo/"
 plugins:
 - jekyll-feed
-- jekyll-admin
 prose:
-  media: uploads
+  rooturl: '_posts'
+  # siteurl: 'http://prose.github.io/starter/'
+  # relativeLinks: 'http://prose.github.io/starter/links.jsonp'
+  media: 'uploads'
+  metadata:
+    _posts:
+      - name: "layout"
+        field:
+          element: "hidden"
+          value: "post"
+      - name: "title"
+        field:
+          element: "text"
+          label: "Title"
+          value: ""
+      - name: "splash"
+        field:
+          element: "text"
+          label: "Splash image"
+          value: ""
+      - name: "tags"
+        field:
+          element: "multiselect"
+          label: "Add Tags"
+          placeholder: "Choose Tags"
+          options:
+            - name: "Picpic"
+              value: "picpic"
+            - name: "Picpic Live"
+              value: "picpiclive"
+            - name: "Audience Engagement"
+              value: "audienceengagement"
+            - name: "Audience Interaction"
+              value: "audienceinteraction"
 # disqus:
 #   shortname: picpiclive
