--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ home_url: https://blog.picpiclive.com
 home_title: 主页
 blog_home_title: 博客主页
 about_title: 关于
-logourl: https://static-cn.picpiclive.com/favicon-270x270.png
+logourl: https://static.picpiclive.com/favicon-270x270.png
 description: Picpic现场互动 - 博客
 baseurl: ""
 url: https://blog.picpiclive.com
