--- a/_config.yml
+++ b/_config.yml
@@ -10,14 +10,14 @@ collections:
     output: true
 author: "© Heluofan Technology Inc."
 email: service@picpic.live
-home_url: https://blog.picpiclive.com
+home_url: https://picpiclive.com
 home_title: 主页
 blog_home_title: 博客主页
 about_title: 关于
 logourl: https://static.picpiclive.com/favicon-270x270.png
 description: Picpic现场互动 - 博客
-baseurl: ""
-url: https://blog.picpiclive.com
+baseurl: "/blog"
+url: https://picpiclive.com
 twitter_username: picpiclive
 instagram_username: picpic_live
 facebook_username: Picpic-Live-161583901330530
@@ -58,7 +58,7 @@ prose:
         field:
           element: "text"
           label: "permalink"
-          value: /:categories/:year/:month/:day/:title.html
+          value: /:categories/:year/:month/:day/:title/
       - name: "splash"
         field:
           element: "text"
@@ -103,7 +103,7 @@ pagination:
   per_page: 5
 
   # The permalink structure for the paginated pages (this can be any level deep)
-  permalink: '/page/:num.html' # Pages are index.html inside this folder (default)
+  permalink: '/page/:num/' # Pages are index.html inside this folder (default)
   #permalink: '/page/:num.html' # Pages are simple html files 
   #permalink: '/page/:num' # Pages are html files, linked jekyll extensionless permalink style.
 
