update chinese branding

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 ---
-title: Picpic现场互动 - 博客
+title: 皮豆互娱 - 博客
 timezone: UTC
 collections:
   posts:
@@ -15,7 +15,7 @@ home_title: 主页
 blog_home_title: 博客主页
 about_title: 关于
 logourl: https://static.picpiclive.com/favicon-270x270.png
-description: Picpic现场互动 - 博客
+description: 皮豆互娱 - 博客
 baseurl: "/blog"
 url: https://picpiclive.com
 twitter_username: picpiclive
